Fix alignment

--- a/site/static/communism/css/main.css
+++ b/site/static/communism/css/main.css
@@ -198,7 +198,7 @@ td.transaction-currency {
 
 th.transaction-stats,
 td.transaction-stats {
-    width: 60x;
+    width: 60px;
     /* for proper width calculation, remove padding */
     padding-left: 0px !important;
     padding-right: 0px !important;
